# webview-rs

./: Cargo.toml  README.md  bunfig.toml  index.d.ts  index.js  package.json
.github/workflows/: CI.yml  build.yml  publish-github.yml
__test__/: render_stress.test.ts
examples/: autoplay.ts  basic-render-example.ts  basic-webview-example.ts  event-listener-example.ts  simple-render-example.ts  tao-rainbow-render-example.ts  test_render.rs  transparency_helper.ts  webview-url-load-example.ts
src/: high_level.rs  lib.rs
src/tao/: enums.rs  mod.rs  platform.rs  render.rs  structs.rs
src/tao/render/: buffer_ops.rs  mod.rs  scaling.rs
src/winit/: enums.rs  functions.rs  mod.rs  platform.rs  render.rs  structs.rs  types.rs
src/wry/: structs.rs
