[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "webview"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.2", default-features = true, features = [
    "napi9",
    "compat-mode",
] }
napi-derive = "3.5.1"
winit = { version = "=0.29.15", features = ["rwh_05"] }
wry = { version = "0.53.5", features = ["devtools", "fullscreen"] }
serde_json = "1"
pixels = "0.15"
softbuffer = "0.4"
once_cell = "1.21.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
